--- a/css/main.css
+++ b/css/main.css
@@ -54,12 +54,12 @@ section {display:flex;}
  .search-box{
     width: 330px;
      height: 30px;
-     padding: 6px 12p;
+     padding: 6px 12px;
      border: 1px solid #a0a0a0;
  }
 .search-button{
     background-color: #a0a0a0;
-    color: #ffff;
+    color: #ffffff;
     width: 100px;
     height:30px;
     border:0;
